# Image_processing_cpp

./: CMakeLists.txt  app  basic  basic_oop.cpp  basics.cpp  contours  core_image_ops.cpp  core_oop  oop_image  phase3_contours.cpp  user_input
image_operations/: image_operations.cpp
phase4_image_processing/: CMakeLists.txt
phase4_image_processing/config/: config.json
phase4_image_processing/include/: image_processor.hpp
phase4_image_processing/src/: cli_main.cpp  image_processor.cpp  json_main.cpp  main.cpp
src/image_operations/: basic_oop.cpp
src/include/: image_operations.h
